--- a/src/ffmpeg/ffmpegPlayer/Makefile
+++ b/src/ffmpeg/ffmpegPlayer/Makefile
@@ -1,6 +1,8 @@
 #
 # http://www.gnu.org/software/make/manual/make.html
 #
+FFMPEG_ROOT = /export/views/video/ffmpeg
+
 CC:=gcc
 INCLUDES:=$(shell pkg-config --cflags libavformat libavcodec libswresample libswscale libavutil sdl)
 CFLAGS:=-Wall -ggdb
@@ -19,7 +21,7 @@ EXE:=tutorial01.out tutorial02.out tutorial03.out tutorial04.out\
 # $@ is the target name
 #
 all: 
-	gcc -g -o  ffmpegPlayer ffmpegPlayer.c -lavformat -lavcodec -lswscale -lavutil -lswresample -lz -lm -ldl `sdl2-config --cflags --libs`
+	gcc -g -o ffmpegPlayer ffmpegPlayer.c ${FFMPEG_ROOT}/libavformat/libavformat.a ${FFMPEG_ROOT}/libavcodec/libavcodec.a ${FFMPEG_ROOT}/libavutil/libavutil.a  ${FFMPEG_ROOT}/libswscale/libswscale.a ${FFMPEG_ROOT}/libswresample/libswresample.a /usr/local/lib/libx264.a -lpthread -lz -lm -ldl -lfdk-aac `sdl2-config --cflags --libs`
 
 dirs:
 	mkdir -p obj
