--- a/src/rtsp/main/Makefile
+++ b/src/rtsp/main/Makefile
@@ -14,7 +14,7 @@ CXXFLAGS   := -g -std=c++14 -Wno-inconsistent-missing-override -Wno-uninitialize
 
 CPPFLAGS   := -I../../rtsp/include/ -I../ffmpeg -I../ffmpeg/compat/atomics/gcc/ -I../../json/include/ -I../../crypto/include/ -I../../http/include/ -I../../base/include/ -I../../net/include/ -I../../net/uv_multiplex/include/ -I../../libuv/include -I../../libuv/src -I../../../build/ -I../../http_parser/ -I${LIVE555_ROOT}/liveMedia/include -I${LIVE555_ROOT}/groupsock/include -I${LIVE555_ROOT}/BasicUsageEnvironment/include -I${LIVE555_ROOT}/UsageEnvironment/include \
               -DHTTPSSL
-LDFLAGS   := -L/export/views/video/ffmpeg/Obj/
+#LDFLAGS   := -L/export/views/video/ffmpeg/Obj/
 
 #/export/views/video/ffmpeg/libavutil/libavutil.a /export/views/video/ffmpeg/libavcodec/libavcodec.a
 LDLIBS    := -lpthread -lm -ldl -lssl -lcrypto -lfdk-aac 
